--- a/19 feb 25/bootstrap.html
+++ b/19 feb 25/bootstrap.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
         <div class="row">
-          <div class="col"><nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="circle"><nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
