new changes with bootstrap lib

--- a/21 feb 25/index.html/logic.html
+++ b/21 feb 25/index.html/logic.html
@@ -7,7 +7,7 @@
     <p><del>the</del> meaning of spirituality has developed and <mark>stalin </mark>expanded over time, and various meanings can be found alongside each other. Traditionally, spirituality is referred to a religious process of re-formation which "aims to recover the original shape of man", oriented at "the image of God" as </p>
     <hr>
 <h1>Abbrivation</h1>
-<p><mark>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</mark></p>
+<p> <abbr title="World Health Organization">WHO </abbr> was founded in 1948</p>
 <hr>
 <h1>Task</h1>
 <p><i>the spirtual </i>meaning of spirituality has developed and <b> the stalin </b>stalinexpanded over time, and various meanings can be found alongside each other. Traditionally, spirituality is referred to a religious process of re-formation which "aims to recover the original shape of man", oriented at "the image of God" as
@@ -18,9 +18,9 @@
         <p>(a-b)<sup>2</sup>=a<sup>2</sup>+b<sup>2</sup>-2ab</p>
         <p>(a)<sup>2</sup>+(b)<sup>2</sup>=(a+b)*(a-b)</p></b>
         <p>10<sup>2</sup>=100</p>
-    <p>(a+b)<sup>2</sup>+b<sup>2</sup></p>
+        <p>(a+b)<sup>2</sup>+b<sup>2</sup></p>
         <hr>
-        <h2>Science Formuls</h2>
+<h2>Science Formuls</h2>
 <p>CH+O<sub>2</sub>=CO<sub>2</sub>+H<sub>2</sub>o</p>
 <p>H<sub>2</sub>O+O<sub>2</sub>=2H<sub>2</sub>O</p>
 <P>HCL+NOH=H<sub>2</sub>o+NCL</P>
