--- a/18 feb 25/index.html
+++ b/18 feb 25/index.html
@@ -6,7 +6,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
  <style>
-    div{border:1px solid black;}
+    div{border:1px solid red;}
     .col{padding:50px 0px;}
  </style>
 </head>
@@ -20,7 +20,7 @@
         <div class="row ">
           <div class="col" style="background: blue;"></div>
           <div class="col" style="background: rgb(0, 255, 128);"></div>
-          <div class="col" style="background: rgb(255, 0, 136);"></div>
+          <div class="col" style="background: rgb(255, 255, 255);"></div>
         </div>
     </div>
     <div class="container ">
